[gd_scene load_steps=9 format=3 uid="uid://boit6xug1wpm4"]

[ext_resource type="Script" path="res://SubViewScale.gd" id="1_5n7o5"]
[ext_resource type="Script" path="res://Scenes/Screens/MainScreen.gd" id="1_pyol8"]
[ext_resource type="PackedScene" uid="uid://cnk16jkvek0dy" path="res://Scenes/UI/projector.tscn" id="4_fa7ws"]
[ext_resource type="Texture2D" uid="uid://daxe2mb8ywsvx" path="res://Assets/Textures/fullscreen-svgrepo-com.svg" id="4_hjjw2"]
[ext_resource type="AudioStream" uid="uid://c23sjrh5mpv1k" path="res://Assets/Audio/Music/walkingTheme.mp3" id="5_0nccv"]
[ext_resource type="Texture2D" uid="uid://ddajpt0ew2bm" path="res://Assets/Textures/volume-min-svgrepo-com.svg" id="5_nr1bp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxpqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewsjh"]
bg_color = Color(0.168627, 0.168627, 0.168627, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_pyol8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_0nccv")
volume_db = -25.0

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SubViewScale" type="SubViewportContainer" parent="Control"]
top_level = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(160, 120)
focus_mode = 2
script = ExtResource("1_5n7o5")

[node name="SubViewport" type="SubViewport" parent="Control/SubViewScale"]
own_world_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
use_occlusion_culling = true
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
positional_shadow_atlas_size = 16
positional_shadow_atlas_16_bits = false
positional_shadow_atlas_quad_0 = 0
positional_shadow_atlas_quad_1 = 0
positional_shadow_atlas_quad_2 = 0
positional_shadow_atlas_quad_3 = 0
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="Label" type="Label" parent="Control/SubViewScale/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Projector" parent="Control/SubViewScale/SubViewport" instance=ExtResource("4_fa7ws")]

[node name="MouseBlock" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 104.0
offset_bottom = 186.0

[node name="FullScreen" type="Button" parent="Control/MouseBlock"]
top_level = true
z_as_relative = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 48.0
tooltip_text = "fullscreen"
focus_mode = 1
icon = ExtResource("4_hjjw2")
flat = true
icon_alignment = 1

[node name="Volume" type="Button" parent="Control/MouseBlock"]
top_level = true
z_as_relative = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
offset_left = 48.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 48.0
tooltip_text = "volume"
focus_mode = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_fxpqe")
toggle_mode = true
icon = ExtResource("5_nr1bp")
flat = true
icon_alignment = 1

[node name="VSlider" type="VSlider" parent="Control/MouseBlock/Volume"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 37.0
offset_right = 24.0
offset_bottom = 165.0
theme_override_styles/slider = SubResource("StyleBoxFlat_ewsjh")
max_value = 1.0
step = 0.01
value = 0.9

[connection signal="gui_input" from="Control/SubViewScale" to="Control/SubViewScale" method="_on_gui_input"]
[connection signal="pressed" from="Control/MouseBlock/FullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="focus_exited" from="Control/MouseBlock/Volume" to="." method="_on_volume_focus_exited"]
[connection signal="toggled" from="Control/MouseBlock/Volume" to="." method="_on_volume_toggled"]
[connection signal="focus_exited" from="Control/MouseBlock/Volume/VSlider" to="." method="_on_v_slider_focus_exited"]
[connection signal="value_changed" from="Control/MouseBlock/Volume/VSlider" to="." method="_on_v_slider_value_changed"]
